--- a/app/styles/dataCards/choropleth.sass
+++ b/app/styles/dataCards/choropleth.sass
@@ -21,6 +21,7 @@
         line-height: 18px
         color: #555
         width: 100%
+        opacity: 0
 
         i
           width: 16px
@@ -32,3 +33,11 @@
         .info-label
           white-space: nowrap
           text-align: left
+
+/*  EXPANDED VS REGION CARD CHOROPLETH STYLES */
+
+.card.expanded
+  .choropleth-map-container
+    .choropleth-map
+      .legend
+        opacity: 1
