--- a/app/styles/dataCards/column-chart.sass
+++ b/app/styles/dataCards/column-chart.sass
@@ -21,8 +21,6 @@ $chart-tooltip-offset: 999px
 div.column-chart
 
   div.chart-scroll
-    overflow-x: auto
-    overflow-y: hidden
     position: absolute
 
   div.column-chart-wrapper
@@ -268,3 +266,7 @@ div.column-chart
         margin-top: -6px
         overflow: hidden
         position: initial
+
+    div.chart-scroll
+      overflow-x: auto
+      overflow-y: hidden
